# signum

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: cli.rs
