[package]
name = "signum"
version = "0.1.2"
edition = "2021"
description = "Signum: password generation app"
homepage = "https://github.com/riccione/signum"
documentation = "https://github.com/riccione/signum"
repository = "https://github.com/riccione/signum"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
