[package]
name = "signum"
version = "0.2.0"
edition = "2021"
description = "Signum: password generation app"
homepage = "https://github.com/riccione/signum"
documentation = "https://github.com/riccione/signum"
repository = "https://github.com/riccione/signum"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.9.2"
