[package]
name = "signum"
version = "0.2.0"
edition = "2024"
description = "Signum: password generation app"
homepage = "https://github.com/riccione/signum"
documentation = "https://github.com/riccione/signum"
repository = "https://github.com/riccione/signum"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

[dependencies]
clap = { version = "4.6.3", features = ["derive"] }
rand = "0.10.2"
